--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	    <ul>
 	        <li><a href="index.html">Welcome</a></li>
 	        <li><a href="aboutme.html">About Me</a></li>
-	        <li><a href="#">WElcome</a></li>
-	        <li><a href="#">WElcome</a></li>
+	        <li><a href="#">HTML page</a></li>
+	        <li><a href="#">Computer hardware</a></li>
 	    </ul>
 	    
 	    
 	</div>
 	
-<!-- Main Body Here -->	
+
 	<div id="mainbody">
 	    <div style="font-size:20">Hello there></div>
 	    <div id="side"></div>
