Worked on intro and About Me

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Test number one </title>
-	<link rel="stylesheet" type="text/css" href="PUTCSSFILENAMHERE.css">
+<link rel= "stylesheet" type= "text.css" href="aboutme.css">
+	<title> About me</title>
+	
 </head>
 	
-<body>
+<body style="background-color:turquoise">
+
+
 	<div id="navbar">
 	    <ul>
 	        <li><a href="index.html">Welcome</a></li>
@@ -13,13 +16,29 @@
 	        <li><a href="#">HTML page</a></li>
 	        <li><a href="#">Computer hardware</a></li>
 	    </ul>
+	    </div>
 	    
 	    
-	</div>
 	
-	<!-- Put Main Body in this DIV -->
+	
+	
 	<div id="mainBody">
-	<p>Hello world</p>
+    <h1>Hey there.</h1>
+	<p>This page is all about me.Again I am Connor Richardson
+	    <ol>
+	        <li>I am in tenth grade</li>
+	        <li>I go to Everest Public Highscool</li>
+	    </ol>
+	    <ul>
+	        <li>In my life I have been to many places</li>
+	        <li>places like Florida,Washington DC,Mexico</li>
+	        <li>those are only some places out of the many places I have visited</li>
+	        <li>My favorite movie 21 jump street and my favorite book series is the Percy Jackson series</li>
+	    </ul>
+	    <img src="http://www.sonypictures.com/movies/21jumpstreet/assets/images/onesheet.jpg">
+
+	    <img src="http://otakujade.files.wordpress.com/2010/05/post.jpg">
+	
 	</div>
 </body>
 </html>
