--- a/aboutme.html
+++ b/aboutme.html
@@ -6,39 +6,43 @@
 	
 </head>
 	
-<body style="background-color:turquoise">
+<body style="background-color:turquoise;font-size:30px">
 
 
-	<div id="navbar">
-	    <ul>
-	        <li><a href="index.html">Welcome</a></li>
-	        <li><a href="aboutme.html">About Me</a></li>
-	        <li><a href="#">HTML page</a></li>
-	        <li><a href="#">Computer hardware</a></li>
-	    </ul>
-	    </div>
-	    
+
+	<div id="navbar">   
+	<ul>
+	    <div id="one"><a href="index.html">Welcome</a></div>       
+	    <div id="two"><a href="aboutme.html">About Me</a></div>
+	    <div id="three"><a href="HTML.html">HTML</a></div>
+	    <div id="four"><a href="#">Computer hardware</a></div>
+	</ul>    
 	    
 	
-	
+	</div>
 	
 	<div id="mainBody">
+   <br />
     <h1>Hey there.</h1>
 	<p>This page is all about me.Again I am Connor Richardson
 	    <ol>
 	        <li>I am in tenth grade</li>
 	        <li>I go to Everest Public Highscool</li>
+	        <li><a href="http://www.summitps.org/"> Click here to get to the the school website</a></li>
 	    </ol>
 	    <ul>
 	        <li>In my life I have been to many places</li>
 	        <li>places like Florida,Washington DC,Mexico</li>
 	        <li>those are only some places out of the many places I have visited</li>
 	        <li>My favorite movie 21 jump street and my favorite book series is the Percy Jackson series</li>
-	    </ul>
 	    <img src="http://www.sonypictures.com/movies/21jumpstreet/assets/images/onesheet.jpg">
-
 	    <img src="http://otakujade.files.wordpress.com/2010/05/post.jpg">
-	
+            <li>I have a few hobbies or things I like to do outside of school like playing football and videogames</li>
+            <li>I like playing footbal because it requires skill that is made overtime and once you have acquired that skill it is very satisfying, and it's pretty awesome when you can tackle someone.</li>
+            <li>I like playing videogames because no matter how stressed out or busy I am I can always take a break and play videogames but they are not just mindless games like most parents think a lot of them require a high level of thinking.</li>
+            <li>I got into football because my friend was playing and he said it was fun and my dad signed me up but once I started playing it was fun</li>
+            <li>I got into videogames at younger age probably around four or five years old, back then I would play nintendo 64,gamecube,gameboy,and the original xbox games a lot. I just loved playing them because it was a stiopry that I got to playthrough and that was fun.</li>
+        </ul>	
 	</div>
 </body>
 </html>
