--- a/aboutme.html
+++ b/aboutme.html
@@ -14,8 +14,8 @@
 	<ul>
 	    <div id="one"><a href="index.html">Welcome</a></div>       
 	    <div id="two"><a href="aboutme.html">About Me</a></div>
-	    <div id="three"><a href="HTML.html">HTML</a></div>
-	    <div id="four"><a href="#">Computer hardware</a></div>
+	    <div id="three"><a href="HTML.html">HTML Page</a></div>
+	    <div id="four"><a href="Computer HardWare.html">Computer hardware</a></div>
 	</ul>    
 	    
 	
@@ -23,7 +23,7 @@
 	
 	<div id="mainBody">
    <br />
-    <h1>Hey there.</h1>
+    <h1 style="font-size:24px">Hey there.</h1>
 	<p>This page is all about me.Again I am Connor Richardson
 	    <ol>
 	        <li>I am in tenth grade</li>
@@ -41,7 +41,7 @@
             <li>I like playing footbal because it requires skill that is made overtime and once you have acquired that skill it is very satisfying, and it's pretty awesome when you can tackle someone.</li>
             <li>I like playing videogames because no matter how stressed out or busy I am I can always take a break and play videogames but they are not just mindless games like most parents think a lot of them require a high level of thinking.</li>
             <li>I got into football because my friend was playing and he said it was fun and my dad signed me up but once I started playing it was fun</li>
-            <li>I got into videogames at younger age probably around four or five years old, back then I would play nintendo 64,gamecube,gameboy,and the original xbox games a lot. I just loved playing them because it was a stiopry that I got to playthrough and that was fun.</li>
+            <li>I got into videogames at younger age probably around four or five years old, back then I would play nintendo 64,gamecube,gameboy,and the original xbox games a lot. I just loved playing them because it was a story that I got to playthrough and that was fun.</li>
         </ul>	
 	</div>
 </body>
